fix layout issues on mobile by using percentage value

--- a/css/template.css
+++ b/css/template.css
@@ -252,7 +252,7 @@ nav#pillmenu a:hover {
 #leftcolumn {
 	padding: 0;
 	margin: 0;
-	width: 195px;
+	width: 20%;
 	float:left;
 }
 
